Fix z-index'es so that calendar is displayed on top of the overlay
git-svn-id: file:///root/var/svn/aranea/branches/change_388@3010 baba0d3d-6527-0410-ba98-ffd8059025de

--- a/etc/css/modalbox/modalbox.css
+++ b/etc/css/modalbox/modalbox.css
@@ -3,7 +3,7 @@
 	margin: auto;
 	top: 0;	left: 0;
 	width: 100%; height: 100%;
-	z-index: 9999;
+	z-index: 89;
 	background-color: #000!important;
 	filter:alpha(opacity=0);
 	-moz-opacity:0;
@@ -16,7 +16,7 @@
 	top: 0;
 	border: 0 solid;
 	text-align:left;
-	z-index:10000;
+	z-index:90;
 }
 #MB_window[id] { position: fixed!important; }
 
